updatd loyalty rewards

--- a/organisms/loyaltyprgrm-reward.html
+++ b/organisms/loyaltyprgrm-reward.html
@@ -14,7 +14,7 @@
     <!-- styles -->
     <title>Western Union</title>
   </head>
-  <body class="wu-loyaltyprgrm_page">
+  <body>
     <div class="wu-loyaltyprgrm wu-lyrewards">
       <div class="content-wrapper">
         <div class="wu-loyaltyprgrm__outer">
@@ -71,13 +71,13 @@
     </div>
 
     <!-- Modal Template (hidden initially) -->
-    <div id="popup1" class="modal" style="display: none;">
+    <div id="wu-lypopup1" class="modal" style="display: none;">
       <div class="modal-content">
         <p class="modal-bodya">Thanks for your submission.</p>
         <p class="modal-bodyb">When you make your second transaction, please input the MICN No.</p>
       </div>
     </div>
-    <div id="popup2" class="modal" style="display: none;">
+    <div id="wu-lypopup2" class="modal" style="display: none;">
       <div class="modal-content">
         <p class="modal-bodya">Thanks for your submission.</p>
         <p class="modal-bodyb">When you make your second transaction, please input the MICN No.</p>
@@ -85,65 +85,7 @@
     </div>
 
     <script>
-// Function to show the modal below the clicked gift box
-function showModalBelow(giftWrap, modal) {
-        const giftBoxRect = giftWrap.getBoundingClientRect();
-
-        // Adjust the top positioning of the modal to appear below the gift box
-        const topPosition = giftBoxRect.bottom + window.scrollY + 10; // 10px gap from the bottom of the gift box
-
-        modal.style.position = 'absolute';
-        modal.style.top = `${topPosition}px`; // Position below the gift box
-        modal.style.left = `${giftBoxRect.left + window.scrollX}px`; // Align with the left of the gift box
-
-        modal.style.display = 'block'; // Show modal
-      }
-
-      // Function to handle button click and modal behavior
-      document.querySelectorAll('.loyaltyprgrm__stmpbtn').forEach((button) => {
-        button.addEventListener('click', function(event) {
-          event.preventDefault();
-
-          const giftWrap = this.closest('.wu-loyaltyprgrm__giftwrap');
-          const modalId = this.id === 'wu-stamppopupa' ? 'popup1' : 'popup2'; // Determine which popup to show
-          const modal = document.getElementById(modalId);
-
-          // Remove the 'faded' class from all gift wraps
-          document.querySelectorAll('.wu-loyaltyprgrm__giftwrap').forEach((wrap) => {
-            wrap.classList.remove('faded');
-          });
-
-          // Add the 'faded' class to the clicked gift wrap
-          giftWrap.classList.add('faded');
-
-          // Hide other modals before showing the new one
-          document.querySelectorAll('.modal').forEach((m) => {
-            m.style.display = 'none';
-          });
-
-          // Show the modal below the clicked gift box
-          showModalBelow(giftWrap, modal);
-        });
-      });
-
-      // Close modal when clicking outside
-      document.addEventListener('click', (event) => {
-        if (!event.target.closest('.wu-loyaltyprgrm__giftwrap') && !event.target.closest('.modal')) {
-          hideModals();
-        }
-      });
-
-      // Function to hide all modals and reset the 'faded' class
-      function hideModals() {
-        document.querySelectorAll('.modal').forEach((modal) => {
-          modal.style.display = 'none';
-        });
-
-        // Reset 'faded' class when hiding modals
-        document.querySelectorAll('.wu-loyaltyprgrm__giftwrap').forEach((wrap) => {
-          wrap.classList.remove('faded');
-        });
-      }
+        
     </script>
 
     <script src="../assets/js/jquery.slim.min.js"></script>
