updated loyalty-form page

--- a/organisms/loyaltyprgrm-form.html
+++ b/organisms/loyaltyprgrm-form.html
@@ -33,6 +33,8 @@
                     <label class="wu-lyprgrmform__inputhd">DATE</label>
                     <input type="date" id="mtcn" class="wu-lyprgrmform__input">
                 </div>
+                <!-- 04 -->
+                <button type="submit" class="wu-lyprgrmform__btn">Submit</button>
             </div>
         </div>
     </div>
