--- a/organisms/loyaltyprgrm-form.html
+++ b/organisms/loyaltyprgrm-form.html
@@ -26,7 +26,7 @@
                 <!-- 02 -->
                 <div class="wu-lyprgrmform__txtcontainer">
                     <label class="wu-lyprgrmform__inputhd">MTCN</label>
-                    <input type="text" id="mtcn" class="wu-lyprgrmform__input">
+                    <input type="text" id="mtcn" class="wu-lyprgrmform__input" placeholder="Enter your MTCN number">
                 </div>
                 <!-- 03 -->
                 <div class="wu-lyprgrmform__txtcontainer wu-lyprgrmform__txtcontainer--b">
@@ -34,7 +34,9 @@
                     <input type="date" id="mtcn" class="wu-lyprgrmform__input">
                 </div>
                 <!-- 04 -->
-                <button type="submit" class="wu-lyprgrmform__btn">Submit</button>
+                <div class="wu-lyprgrmform__btnouter">
+                  <button type="submit" class="wu-lyprgrmform__btn">Submit</button>
+                </div>
             </div>
         </div>
     </div>
