--- a/organisms/loyaltyprgrm-reward.html
+++ b/organisms/loyaltyprgrm-reward.html
@@ -71,22 +71,20 @@
     </div>
 
     <!-- Modal Template (hidden initially) -->
-    <div id="wu-lypopup1" class="modal" style="display: none;">
+    <div id="wu_lypopup1" class="modal" style="display: none;">
       <div class="modal-content">
         <p class="modal-bodya">Thanks for your submission.</p>
         <p class="modal-bodyb">When you make your second transaction, please input the MICN No.</p>
       </div>
     </div>
-    <div id="wu-lypopup2" class="modal" style="display: none;">
+    <div id="wu_lypopup2" class="modal" style="display: none;">
       <div class="modal-content">
         <p class="modal-bodya">Thanks for your submission.</p>
         <p class="modal-bodyb">When you make your second transaction, please input the MICN No.</p>
       </div>
     </div>
 
-    <script>
-        
-    </script>
+    
 
     <script src="../assets/js/jquery.slim.min.js"></script>
     <script src="../assets/js/aos.js"></script>
