--- a/organisms/loyaltyprgrm-reward.html
+++ b/organisms/loyaltyprgrm-reward.html
@@ -63,24 +63,28 @@
                     </button>
                   </div>
                  </div>
+                 <!-- Tile 3 -->
+                 <div class="wu-lyrewards__giftwrapouter">
+                  <div class="wu-loyaltyprgrm__giftwrap">
+                    <button type="button" class="loyaltyprgrm__stmpbtn" id="wu-stamppopupb">
+                      <div class="wu-gift">
+                        <div class="wu-gift__top">
+                          <div class="wu-gift__img">
+                            <img src="../assets/images/Gift-loyaltyprgrm.png" alt="" />
+                          </div>
+                        </div>
+                        <div class="wu-gift__cnt">
+                          <div class="wu-gift__title">Stamp for First Transaction</div>
+                          <div class="wu-gift__text">Click on the stamp to redeem</div>
+                        </div>
+                      </div>
+                    </button>
+                  </div>
+                 </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-    </div>
-
-    <!-- Modal Template (hidden initially) -->
-    <div id="wu_lypopup1" class="modal" style="display: none;">
-      <div class="modal-content">
-        <p class="modal-bodya">Thanks for your submission.</p>
-        <p class="modal-bodyb">When you make your second transaction, please input the MICN No.</p>
-      </div>
-    </div>
-    <div id="wu_lypopup2" class="modal" style="display: none;">
-      <div class="modal-content">
-        <p class="modal-bodya">Thanks for your submission.</p>
-        <p class="modal-bodyb">When you make your second transaction, please input the MICN No.</p>
       </div>
     </div>
 
