--- a/organisms/loyaltyprgrm-reward.html
+++ b/organisms/loyaltyprgrm-reward.html
@@ -15,22 +15,22 @@
     <title>Western Union</title>
   </head>
   <body>
-    <div class="wu-loyaltyprgrm wu-lyrewards">
+    <div class="wu-lyrewards">
       <div class="content-wrapper">
-        <div class="wu-loyaltyprgrm__outer">
+        <div class="wu-lyrewards__outer">
           <h3 class="wu-title text-center">Loyalty Program</h3>
           <!-- section - 1 -->
-          <div class="wu-loyaltyprgrm__container">
-            <div class="wu-loyaltyprgrm__containerinner">
+          <div class="wu-lyrewards__container">
+            <div class="wu-lyrewards__containerinner">
               <div href="#" class="wu-lyrewards__subhead">
                 <span>*</span>
                 <a href="#">Terms & Conditions</a>
               </div>
-              <div class="wu-loyaltyprgrm__containerwrap">
+              <div class="wu-lyrewards__containerwrap">
                 <!-- Tile 1 -->
                 <div class="wu-lyrewards__giftwrapouter">
-                  <div class="wu-loyaltyprgrm__giftwrap">
-                    <button type="button" class="loyaltyprgrm__stmpbtn" id="wu-stamppopupa">
+                  <div class="wu-lyrewards__giftwrap">
+                    <button type="button" class="wu-lyrewards__stmpbtn" id="wu-stamppopupa">
                       <div class="wu-gift">
                         <div class="wu-gift__top">
                           <div class="wu-gift__img">
@@ -47,8 +47,8 @@
                 </div>
                 <!-- Tile 2 -->
                  <div class="wu-lyrewards__giftwrapouter">
-                  <div class="wu-loyaltyprgrm__giftwrap">
-                    <button type="button" class="loyaltyprgrm__stmpbtn" id="wu-stamppopupb">
+                  <div class="wu-lyrewards__giftwrap">
+                    <button type="button" class="wu-lyrewards__stmpbtn" id="wu-stamppopupb">
                       <div class="wu-gift">
                         <div class="wu-gift__top">
                           <div class="wu-gift__img">
@@ -56,7 +56,7 @@
                           </div>
                         </div>
                         <div class="wu-gift__cnt">
-                          <div class="wu-gift__title">Stamp for First Transaction</div>
+                          <div class="wu-gift__title">Stamp for Second Transaction</div>
                           <div class="wu-gift__text">Click on the stamp to redeem</div>
                         </div>
                       </div>
@@ -65,8 +65,8 @@
                  </div>
                  <!-- Tile 3 -->
                  <div class="wu-lyrewards__giftwrapouter">
-                  <div class="wu-loyaltyprgrm__giftwrap">
-                    <button type="button" class="loyaltyprgrm__stmpbtn" id="wu-stamppopupb">
+                  <div class="wu-lyrewards__giftwrap">
+                    <button type="button" class="wu-lyrewards__stmpbtn" id="wu-stamppopupc">
                       <div class="wu-gift">
                         <div class="wu-gift__top">
                           <div class="wu-gift__img">
@@ -74,7 +74,7 @@
                           </div>
                         </div>
                         <div class="wu-gift__cnt">
-                          <div class="wu-gift__title">Stamp for First Transaction</div>
+                          <div class="wu-gift__title">Stamp for Third Transaction</div>
                           <div class="wu-gift__text">Click on the stamp to redeem</div>
                         </div>
                       </div>
