--- a/organisms/loyaltyprgrm.html
+++ b/organisms/loyaltyprgrm.html
@@ -14,7 +14,7 @@
     <!-- styles -->
     <title>Western Union</title>
   </head>
-  <body class="wu-loyaltyprgrm_page">
+  <body>
     <!-- body content start -->
      <div class="wu-loyaltyprgrm">
         <div class="content-wrapper">
