--- a/organisms/loyaltyprgrm-otp_new.html
+++ b/organisms/loyaltyprgrm-otp_new.html
@@ -15,6 +15,33 @@
   </head>
   <body>
     <!-- body content start -->
+     <div class="wu-lyotp">
+      <div class="content-wrapper">
+        <div class="wu-lyotp__out">
+          <div class="wu-lyotp__otphead">
+            <a class="wu-lyotp__arrowlogo">
+              <img src="../assets/images/wu-leftarw.png" alt="img">
+            </a>
+            <h3 class="wu-lyotp__h3">Enter OTP</h3>
+          </div>   
+          <p class="wu-lyotp__para">A OTP has been sent to +65 9857 XXXX number</p>    
+          
+          <!-- input -->
+           <div class="wu-lyotp__field">
+             <div class="wu-lyotp__fieldout">
+              <label for="" class="wu-lyotp__label">Enter your OTP<span>*</span></label>
+              <input type="text" id="" class="wu-lyotp__input">
+              <a href="#" class="wu-lyotp__resend">Resend code</a>
+             </div>
+            </div>
+            <div class="wu-lyotp_btnout">
+              <div class="wu-btns">
+               <button type="submit" class="wu-btns__inner">Submit</button>
+             </div>
+            </div>
+        </div>
+      </div>
+     </div>
     <!-- body content end -->
 
     <!-- scripts -->
