--- a/organisms/loyaltyprgrm-otp_new.html
+++ b/organisms/loyaltyprgrm-otp_new.html
@@ -10,8 +10,9 @@
     <link rel="stylesheet" href="../assets/css/slick-theme.css">
     <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="../assets/css/style.css" />
+    <link data-react-helmet="true" rel="icon" href="../assets/images/favicon.ico">
     <!-- styles -->
-    <title>Document</title>
+    <title>Western Union</title>
   </head>
   <body>
     <!-- body content start -->
