--- a/organisms/loyaltyprgrm-reward.html
+++ b/organisms/loyaltyprgrm-reward.html
@@ -18,7 +18,12 @@
     <div class="wu-lyrewards">
       <div class="content-wrapper">
         <div class="wu-lyrewards__outer">
-          <h3 class="wu-cmp-bckbtntitle__title">Loyalty Program</h3>
+          <div class="wu-cmp-bckbtntitle">
+            <a href="#" class="wu-cmp-bckbtntitle__img">
+              <img src="../assets/images/wu-leftarw.png" alt="">
+            </a>
+            <h3 class="wu-cmp-bckbtntitle__title">Loyalty Program</h3>
+          </div>
           <!-- section - 1 -->
           <div class="wu-lyrewards__container">
             <div class="wu-lyrewards__containerinner">
