--- a/atoms/buttonsb.html
+++ b/atoms/buttonsb.html
@@ -28,6 +28,18 @@
         <button type="submit" class="wu-btns__inner">Submit</button>
     </div>
 
+    <!-- combo btns  black-->
+     <div class="wu-btns">
+      <button type="submit" class="wu-btns__inner">Back</button>
+      <button type="submit" class="wu-btns__inner">Proceed</button>
+     </div>
+
+    <!-- combo btns  ylw-->
+     <div class="wu-btns wu-btns--ylw">
+      <button type="submit" class="wu-btns__inner">Back</button>
+      <button type="submit" class="wu-btns__inner">Proceed</button>
+     </div>
+
     <!-- body content end -->
 
     <!-- scripts -->
