--- a/atoms/buttonsb.html
+++ b/atoms/buttonsb.html
@@ -21,6 +21,9 @@
     <div class="wu-btns">
         <button type="submit" class="wu-btns__inner">Submit</button>
     </div>
+    <div class="wu-btns">
+        <button type="submit" class="wu-btns__inner">Get OTP</button>
+    </div>
 
     <!-- yellow -->
 
