--- a/organisms/lp-detailspage.html
+++ b/organisms/lp-detailspage.html
@@ -34,10 +34,12 @@
                 </div>
             </div>
             <div class="wu-detailspg__dtlswrap">
-                <div class="wu-detailspg__dtlstxt">Already have an account? <span><a href="#">Click here</a></span></div>
-                <div class="wu-detailspg__dtlssubhead">
-                    
-                </div>
+                <p class="wu-detailspg__dtlstxt">Already have an account? <span class="wu-detailspg__dtlstxtbld"><a href="#">Click here</a></span></p>
+                <h5 class="wu-detailspg__dtlssubhead">
+                <p class="wu-detailspg__dtlstxt">By clicking "Create Account," you acknowledge the following:</p>
+                <p class="wu-detailspg__dtlstxt"><span class="wu-detailspg__dtlstxtbld">a) </span>Participation in the campaign requires creating an account with Stratagile and providing personal information. Your account will be subject to Stratagile's Terms and Conditions, and personal data will be handled by Stratagile according to Stratagile's Privacy Policy. Western Union is not responsible for personal data processing by Stratagile.</p>
+                <p class="wu-detailspg__dtlstxt"><span class="wu-detailspg__dtlstxtbld">a) </span>The campaign will follow its own Terms and Conditions.</p>
+                </h5>
             </div>
         </div>
        </div>
