--- a/atoms/buttonsb.html
+++ b/atoms/buttonsb.html
@@ -43,6 +43,12 @@
       <button type="submit" class="wu-btns__inner">Proceed</button>
      </div>
 
+     <!-- dual button clrs -->
+     <div class="wu-btns">
+      <button type="submit" class="wu-btns__inner wu-btns__inner--ylw">Back</button>
+      <button type="submit" class="wu-btns__inner">Proceed</button>
+     </div>
+
     <!-- body content end -->
 
     <!-- scripts -->
