--- a/organisms/lp-detailspage.html
+++ b/organisms/lp-detailspage.html
@@ -35,11 +35,16 @@
             </div>
             <div class="wu-detailspg__dtlswrap">
                 <p class="wu-detailspg__dtlstxt">Already have an account? <span class="wu-detailspg__dtlstxtbld"><a href="#">Click here</a></span></p>
-                <h5 class="wu-detailspg__dtlssubhead">
+                <h5 class="wu-detailspg__dtlssubhead">Promotion Details</h5>
                 <p class="wu-detailspg__dtlstxt">By clicking "Create Account," you acknowledge the following:</p>
-                <p class="wu-detailspg__dtlstxt"><span class="wu-detailspg__dtlstxtbld">a) </span>Participation in the campaign requires creating an account with Stratagile and providing personal information. Your account will be subject to Stratagile's Terms and Conditions, and personal data will be handled by Stratagile according to Stratagile's Privacy Policy. Western Union is not responsible for personal data processing by Stratagile.</p>
-                <p class="wu-detailspg__dtlstxt"><span class="wu-detailspg__dtlstxtbld">a) </span>The campaign will follow its own Terms and Conditions.</p>
-                </h5>
+                <!-- a -->
+                <p class="wu-detailspg__dtlstxt"><span class="wu-detailspg__dtlstxtbld">a) </span>Participation in the campaign requires creating an account with Stratagile and providing personal information. Your account will be subject to <span class="wu-detailspg__dtlstxtbld">Stratagile's Terms and Conditions</span>, and personal data will be handled by Stratagile according to <span class="wu-detailspg__dtlstxtbld">Stratagile's Privacy Policy</span>. Western Union is not responsible for personal data processing by Stratagile.</p>
+                <!-- b -->
+                <p class="wu-detailspg__dtlstxt"><span class="wu-detailspg__dtlstxtbld">b) </span>The campaign will follow its own Terms and Conditions.</p>
+            </div>
+            <div class="wu-btns">
+              <button type="submit" class="wu-btns__inner wu-btns__inner--ylw">Back</button>
+              <button type="submit" class="wu-btns__inner">Proceed</button>
             </div>
         </div>
        </div>
