--- a/organisms/lp-detailspage.html
+++ b/organisms/lp-detailspage.html
@@ -19,18 +19,18 @@
 
     <div class="wu-detailspg">
         <div class="wu-detailspg__bg desk-visible hide-mobile-tablet" style="background-image: url('https://uat.th.qrme.cloud/customer/assets/images/signup-bg.png?version=20230330');"></div>
-      <div class="wu-detailspg__bg only-mobile-tablet" style="background-image: url('https://uat.th.qrme.cloud/customer/assets/images/signup-bg-tab.png?version=20230330');"></div>
+      <div class="wu-detailspg__bg only-mobile-tablet" style="background-image: url('https://uat.th.qrme.cloud/customer/assets/images/signup-bg.png?version=20230330');"></div>
       <!-- content-wrapper -->
        <div class="content-wrapper">
         <div class="wu-detailspg__wrap">
             <div>
                 <div class="wu-detailspg__content">
-                    <div class="wu-detailspg__content__bg only-mobile" style="background-image: url(../customer/assets/images/signup-bg-mob.png?version=20230330);"></div>
-                </div>
-                <div class="wu-detailspg__content-wrap">
-                    <h3 class="wu-title">
-                        Welcome to the Western Union Campaign Page, managed/ powered by Stratagile!
-                    </h3>
+                    <div class="wu-detailspg__content__bg only-mobile" style="background-image: url('https://uat.th.qrme.cloud/customer/assets/images/signup-bg-mob.png?version=20230330');"></div>
+                    <div class="wu-detailspg__content-wrap">
+                      <h3 class="wu-title">
+                          Welcome to the Western Union Campaign Page, managed/ powered by Stratagile!
+                      </h3>
+                  </div>
                 </div>
             </div>
             <div class="wu-detailspg__dtlswrap">
