--- a/organisms/lp-terms&conditions.html
+++ b/organisms/lp-terms&conditions.html
@@ -10,8 +10,9 @@
     <link rel="stylesheet" href="../assets/css/slick-theme.css">
     <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="../assets/css/style.css" />
+    <link data-react-helmet="true" rel="icon" href="../assets/images/favicon.ico">
     <!-- styles -->
-    <title>Document</title>
+    <title>Western Union</title>
   </head>
   <body>
     <!-- body content start -->
@@ -91,6 +92,24 @@
                             </li>
                         </ul>
                      </div>
+                     <!-- 11 -->
+                     <div class="wu-lpterms__termitem"><span>11. </span><p>Offer valid while stocks last and valid during the Promotion Period. Prizes are provided by a third-party provider, subject to their respective terms and conditions (<a href="https://gifts.grab.com/th/">https://gifts.grab.com/th/</a>) of the product warranty, in relation to which the Promoter will have no liability whatsoever.</p></div>
+                     <!-- 12 -->
+                     <div class="wu-lpterms__termitem"><span>12. </span><p>Winners shall be responsible for any tax arising for winning the prize. The prizes are provided by a third party and will be responsible for any matters arising from or in connection with the prizes, services, and/or information they provide in relation to which the Promoter will have no liability whatsoever. Any enquiry or complaint regarding the prizes, services, and/or information should be directed to the third party. The Promoter will not be held liable for prizes that do not reach winners expectations and to the quality and availability of the prizes, services and information provided by the third-party provider, and excludes liability in connection with the Promotion once the winner(s) enjoys any benefit relating to the Promotion of the full extent permitted by law.</p></div>
+                     <!-- 13 -->
+                     <div class="wu-lpterms__termitem"><span>13. </span><p>If this Promotion is interfered with in any way or is not capable of being conducted as reasonably anticipated due to any reason beyond the reasonable control of the Promoter, including but not limited to technical difficulties or failures, unauthorized intervention or fraud, vandalism, power failure, natural disasters, acts of God, civil unrest, strikes, infection by computer virus, bugs, tampering, unauthorized intervention, fraud, or any other causes beyond the control of the Promoter, which corrupt or affect the administration, security, fairness or integrity or proper conduct of this Promotion, the Promoter reserves the right, in its sole discretion, to the fullest extent permitted by law: (a) to disqualify any Eligible Participant; or (b) subject to any written directions from a regulatory authority, to modify, suspend, terminate or cancel the Promotion, as appropriate to give effect so far as reasonably possible to the original intent of this Promotion.</p></div>
+                     <!-- 14 -->
+                     <div class="wu-lpterms__termitem"><span>14. </span><p>Subject to any applicable laws which cannot be excluded, the Promoter and its related bodies corporate and agents associated with this Promotion shall not be liable for any loss, damage or injury suffered or sustained by anyone (including, but not limited to, direct or indirect loss, consequential loss or loss arising from negligence) arising directly or indirectly out of or in connection with this Promotion or any prize provided as part of this Promotion.</p></div>
+                     <!-- 15 -->
+                     <div class="wu-lpterms__termitem"><span>15. </span><p>To the extent that there is any inconsistency between these terms and conditions and other marketing materials or collateral produced in relation to this Promotion, these terms and conditions will prevail.</p></div>
+                     <!-- 16 -->
+                     <div class="wu-lpterms__termitem"><span>16. </span><p>For any further clarification and complaints, you can reach out to Stratagile Pte Ltd (“Promoter”) at: xxxxxxxxx(Local support contact number)</p></div>
+                     <!-- 17 -->
+                     <div class="wu-lpterms__termitem"><span>17. </span><p>Acceptance of any prize, benefit and/or offer provided by the Promoter will be deemed as consent by the winner(s) to take part in any related publicity and using their name, likeness, image and/or voice for advertising and other promotional purposes without compensation, except as otherwise prohibited by any applicable law.</p></div>
+                     <!-- 18 -->
+                     <div class="wu-lpterms__termitem"><span>18. </span><p>Stratagile will keep the details in a secure database (AWS hosted). The customer data will not be used for any purpose except for winner selection and will not be shared either. If a customer opts out, we will permanently delete the record with no history. Western Union will have visibility of the data solely for transaction verification purposes and will not retain any copy. We will delete the data at the end of the pilot period. We will post a detailed online privacy statement and Terms and Conditions attached to the link.</p></div>
+                     <!-- 19 -->
+                     <div class="wu-lpterms__termitem"><span>19. </span><p>The promotion is compliant with all applicable anti-bribery and corruption laws and regulations.</p></div>
                 </div>
             </div>
         </div>
